--- a/SemanticInteroperabilitySimplified.html
+++ b/SemanticInteroperabilitySimplified.html
@@ -10,7 +10,7 @@
         content="De la sémiotique à l'interopérabilité sémantiques des entreprises dans le monde numérique">
     <meta name="author" content="Nicolas Figay">
 
-    <meta name="apple-mobile-web-app-capable" content="yes">
+    <meta name="mobile-web-app-capable" content="yes">
     <meta name="apple-mobile-web-app-status-bar-style" content="black-translucent">
 
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
