--- a/SemanticCartography.html
+++ b/SemanticCartography.html
@@ -19,9 +19,9 @@
     <div class="slides">
       <!-- Slide 1: Title Slide -->
       <section>
-        <h1>Semantic Cartography 2025</h1>
-        <p>From ArchiMate to ArchiCG – Navigating Complexity Beyond Diagrams</p>
-        <p>Presented by: [Your Name]</p>
+        <h1>Semantic Interoperability Masterclass</h1>
+        <p>From Foundational Principles to Interactive Knowledge Cartography</p>
+        <p>Presented by Dr Nicolas Figay and Pr Parisa Ghodous</p>
       </section>
 
       <!-- Slide 2: Introduction to the Notion of Meaning -->
