--- a/SemanticCartography.html
+++ b/SemanticCartography.html
@@ -498,8 +498,8 @@
                                         <div class="content-zone" style="flex: 1; position: relative; height: 150px;">
                                             <div class="fragment fade-in-then-out" data-fragment-index="1"
                                                 style="position: absolute; top: 0; left: 0; width: 100%; text-align: center;">
-                                                <img src="./img/triangleSemantique.png" alt="Image locale"
-                                                    style="max-width: 70%; height: auto;" />
+                                                <img src="./img/SemioticTriangle.png" alt="Image locale"
+                                                    style="max-width: 50%; height: auto;" />
                                                 <p
                                                     style="font-size: 0.5em;position: absolute;margin-top: 1empx;margin-left: -450px;text-align: left;">
                                                     <strong>Semiotics </strong>is the study
@@ -515,8 +515,8 @@
                                             </div>
                                             <div class="fragment fade-in-then-out" data-fragment-index="2"
                                                 style="position: absolute; top: 0; left: 0; width: 100%; text-align: center;">
-                                                <img src="./img/triangleSemantique.png" alt="Image locale"
-                                                    style="max-width: 70%; height: auto;" />
+                                                <img src="./img/Semantics.png" alt="Image locale"
+                                                    style="max-width: 60%; height: auto;" />
                                                 <p
                                                     style="font-size: 0.5em;position: absolute;margin-top: 1empx;margin-left: -450px;text-align: left;">
                                                     <strong>Semantics</strong> studies the meaning and significance of
@@ -526,13 +526,13 @@
                                                     It examines how these meanings are understood by users in different
                                                     contexts.<br>
                                                     It is divided into several subfields, including linguistic
-                                                    semantics, logical semantics, and visual semantics, which focuses on
+                                                    semantics, logical semantics, and <strong>visual semantics</strong>, which focuses on
                                                     the interpretation of visual symbols.
                                                 </p>
                                             </div>
                                             <div class="fragment fade-in-then-out" data-fragment-index="3"
                                                 style="position: absolute; top: 0; left: 0; width: 100%; text-align: center;">
-                                                <img src="./img/triangleSemantique.png" alt="Image locale"
+                                                <img src="./img/Syntax.png" alt="Image locale"
                                                     style="max-width: 70%; height: auto;" />
                                                 <p
                                                     style="font-size: 0.5em;position: absolute;margin-top: 1empx;margin-left: -450px;text-align: left;">
@@ -551,8 +551,8 @@
                                             </div>
                                             <div class="fragment fade-in-then-out" data-fragment-index="4"
                                                 style="position: absolute; top: 0; left: 0; width: 100%; text-align: center;">
-                                                <img src="./img/triangleSemantique.png" alt="Image locale"
-                                                    style="max-width: 70%; height: auto;" />
+                                                <img src="./img/Pragmatics.png" alt="Image locale"
+                                                    style="max-width: 80%; height: auto;" />
                                                 <p
                                                     style="font-size: 0.5em;position: absolute;margin-top: 1empx;margin-left: -450px;text-align: left;">
 
@@ -568,8 +568,8 @@
 
                                             <div class="fragment fade-in-then-out" data-fragment-index="5"
                                                 style="position: absolute; top: 0; left: 0; width: 100%; text-align: center;">
-                                                <img src="./img/triangleSemantique.png" alt="Image locale"
-                                                    style="max-width: 70%; height: auto;" />
+                                                <img src="./img/DenotationConnotation.png" alt="Image locale"
+                                                    style="max-width: 80%; height: auto;" />
                                                 <p
                                                     style="font-size: 0.5em;position: absolute;margin-top: 1empx;margin-left: -450px;text-align: left;">
                                                     <strong>Denotation</strong> is the primary, explicit, and objective
@@ -584,8 +584,8 @@
                                             </div>
                                             <div class="fragment fade-in-then-out" data-fragment-index="6"
                                                 style="position: absolute; top: 0; left: 0; width: 100%; text-align: center;">
-                                                <img src="./img/triangleSemantique.png" alt="Image locale"
-                                                    style="max-width: 70%; height: auto;" />
+                                                <img src="./img/Rhetoric.png" alt="Image locale"
+                                                    style="max-width: 90%; height: auto;" />
                                                 <p
                                                     style="font-size: 0.5em;position: absolute;margin-top: 1empx;margin-left: -450px;text-align: left;">
                                                     <strong>Rhetoric</strong> is the art of structuring information to
@@ -625,8 +625,8 @@
                                         <div class="content-zone" style="flex: 1; position: relative; height: 150px;">
                                             <div class="fragment fade-in-then-out" data-fragment-index="1"
                                                 style="position: absolute; top: 0; left: 0; width: 100%; text-align: center;">
-                                                <img src="./img/triangleSemantique.png" alt="Image locale"
-                                                    style="max-width: 70%; height: auto;" />
+                                                <img src="./img/SingleSymbolSemanticGraph.png" alt="Image locale"
+                                                    style="max-width: 100%; height: auto;" />
                                                 <p
                                                     style="font-size: 0.5em;position: absolute;margin-top: 1empx;margin-left: -450px;text-align: left;">
                                                     A <strong>concept</strong> alone carries limited meaning.<br> It is
@@ -641,11 +641,11 @@
                                             </div>
                                             <div class="fragment fade-in-then-out" data-fragment-index="2"
                                                 style="position: absolute; top: 0; left: 0; width: 100%; text-align: center;">
-                                                <img src="./img/triangleSemantique.png" alt="Image locale"
-                                                    style="max-width: 70%; height: auto;" />
+                                                <img src="./img/PersonalCommunityKnowledge.png" alt="Image locale"
+                                                    style="max-width: 80%; height: auto;" />
                                                 <p
                                                     style="font-size: 0.5em;position: absolute;margin-top: 1empx;margin-left: -450px;text-align: left;">
-                                                    <strong>Individual knowledge</strong>is shaped by personal
+                                                    <strong>Individual knowledge </strong>is shaped by personal
                                                     experience and perception.<br>
                                                     <strong>Collective knowledge</strong> emerges from shared
                                                     conventions, norms, and meanings within a community.<br>
@@ -655,7 +655,7 @@
                                             </div>
                                             <div class="fragment fade-in-then-out" data-fragment-index="3"
                                                 style="position: absolute; top: 0; left: 0; width: 100%; text-align: center;">
-                                                <img src="./img/triangleSemantique.png" alt="Image locale"
+                                                <img src="./img/surchagedTerm.png" alt="Image locale"
                                                     style="max-width: 70%; height: auto;" />
                                                 <p
                                                     style="font-size: 0.5em;position: absolute;margin-top: 1empx;margin-left: -450px;text-align: left;">
@@ -669,7 +669,7 @@
                                             </div>
                                             <div class="fragment fade-in-then-out" data-fragment-index="4"
                                                 style="position: absolute; top: 0; left: 0; width: 100%; text-align: center;">
-                                                <img src="./img/triangleSemantique.png" alt="Image locale"
+                                                <img src="./img/multiTypedReferent.png" alt="Image locale"
                                                     style="max-width: 70%; height: auto;" />
                                                 <p
                                                     style="font-size: 0.5em;position: absolute;margin-top: 1empx;margin-left: -450px;text-align: left;">
