--- a/SemanticCartography.html
+++ b/SemanticCartography.html
@@ -3645,8 +3645,8 @@
                                     </aside>
                                 </section>
                                 
-                                <section data-graph="Graph_1">
-                                    <h4 style="font-size:20px;">Family Ontology</h4>
+                                <section data-graph="Graph_4">
+                                    <h4 style="font-size:20px;">OWL Ontology derived from ArchiMate as a Semantic Cartography</h4>
                                     <div style="font-size: 15px;">
                                         Expand <span class="clickable-action" data-action="expand" data-target="all">nodes</span>
                                         <span class="clickable-action" data-action="expandedges" data-target="all">edges</span><br />
@@ -3691,15 +3691,79 @@
         </div>
 
         <script src="dist/reveal.js"></script>
-
+        <script src="lib/cytoscape.min.js"></script>
+        <script src="lib/layout-base.js"></script>
+        <script src="lib/cose-base.js"></script>
+        <script src="lib/cytoscape-fcose.js"></script>
+        <script src="lib/cytoscape-undo-redo.js"></script>
+        <script src="lib/cytoscape-expand-collapse.js"></script>
+        <script src="lib/layout-base.js"></script>
+        <script src="lib/cola.min.js"></script>
+        <script src="lib/cytoscape-cola.js"></script>
+        <!-- Dagre.js (Required for cytoscape-dagre) -->
+        <script src="lib/dagre.min.js"></script>
+        <!-- Cytoscape-Dagre Extension -->
+        <script src="lib/cytoscape-dagre.js"></script>
         <script src="plugin/zoom/zoom.js"></script>
         <script src="plugin/notes/notes.js"></script>
         <script src="plugin/search/search.js"></script>
         <script src="plugin/markdown/markdown.js"></script>
         <script src="plugin/highlight/highlight.js"></script>
         <script src="plugin/menu/menu.js"></script>
-
+        <script src="lib/i18next.min.js"></script>
+        <script defer src="js/cytoscape/predefinedGraphs.js"></script>
+        <script defer src="js/cytoscape/OntologyViewerStyle.js"></script>
+        <script defer src="js/cytoscape/displayer.js"></script> <!-- Your script -->
+        <script src="https://code.jquery.com/jquery-2.2.4.min.js"></script>
         <script>
+            function speakText(text, language = "en", voiceName = "Alex", rate = 0.6) {
+                const synth = window.speechSynthesis;
+                const utterance = new SpeechSynthesisUtterance(text);
+
+                // Sélectionner la voix
+                const voices = synth.getVoices();
+                const selectedVoice = voices.find(voice => voice.name === voiceName && voice.lang === language);
+                if (selectedVoice) {
+                    utterance.voice = selectedVoice;
+                } else {
+                    // Si la voix spécifique n'est pas trouvée, prendre la première voix disponible
+                    utterance.voice = voices[0];
+                }
+
+                // Vitesse plus lente (0.8 est plus lent que la vitesse normale de 1.0)
+                utterance.rate = rate;
+
+                // Ajouter des pauses entre les bullet points
+                // Diviser le texte en éléments de liste et les prononcer un par un
+                const bulletPoints = text.split("\n").map(point => point.trim()).filter(Boolean);
+
+                // Créer une séquence pour prononcer chaque bullet point avec une pause
+                let currentIndex = 0;
+                function speakNextBullet() {
+                    if (currentIndex < bulletPoints.length) {
+                        const bulletText = bulletPoints[currentIndex];
+                        const utterance = new SpeechSynthesisUtterance(bulletText);
+                        utterance.voice = selectedVoice;
+                        utterance.rate = rate;
+
+                        utterance.onend = () => {
+                            currentIndex++;
+                            speakNextBullet();  // Passer au suivant après une pause naturelle
+                        };
+
+                        synth.speak(utterance);
+                    }
+                }
+
+                speakNextBullet();  // Commencer la lecture
+            }
+
+            // Exemple pour un texte français lent avec pauses
+            //   document.addEventListener("slidechanged", (event) => {
+            //       const text = event.currentSlide.innerText;
+            //       speakText(text, "fr-FR", "Audrey", 0.8);  // Voix "Thomas" en français avec un débit lent
+            //  });
+
 
             // Also available as an ES module, see:
             // https://revealjs.com/initialization/
@@ -3726,7 +3790,16 @@
                 plugins: [RevealZoom, RevealNotes, RevealSearch, RevealMarkdown, RevealHighlight, RevealMenu],
             });
 
-
+            // 3. On Reveal.js ready event, copy header/footer <div> into each `.slide-background` <div>
+            var header = $('#header').html();
+            if (window.location.search.match(/print-pdf/gi)) {
+                Reveal.addEventListener('ready', function (event) {
+                    $('.slide-background').append(header);
+                });
+            }
+            else {
+                $('div.slides').append(header);
+            }
         </script>
     </div>
 </body>
