--- a/SemanticCartography.html
+++ b/SemanticCartography.html
@@ -3662,7 +3662,7 @@
 
                                 <section data-graph="Graph_1">
                                     <h4 style="font-size:20px;">OWL Ontology derived from ArchiMate as a Semantic
-                                        Cartography</h4>
+                                        Cartography new</h4>
                                     <div
                                         style="display: flex; justify-content: center; align-items: center; height: 100%; font-size: 15px;">
                                         <div style="display: flex; gap: 30px;">
